NOTICKET: Fix room cards wrapping and correct favorite document cards gap

--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -20,9 +20,12 @@
 
 .FavoritesTab-cards {
   .m-section-content;
-  .m-card-wrapper;
 
-  &.FavoritesTab-cards--documents {
+  &.FavoritesTab-cards--small {
+    .m-card-wrapper;
+  }
+
+  &.FavoritesTab-cards--wide {
     .m-card-wrapper-wide;
   }
 }
