--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -82,11 +82,10 @@
 }
 
 .RoomPage-members {
-  display: flex;
+  .m-card-wrapper;
 }
 
 .RoomPage-member {
-  margin-right: 15px;
   position: relative;
 }
 
